cbits/Bullet.h

void btCollisionShapeData_free(void *c);
 
void btCollisionShapeData_m_name_set(void *c,char * a); //attribute: char * btCollisionShapeData->m_name
char * btCollisionShapeData_m_name_get(void *c); //attribute: char * btCollisionShapeData->m_name
void btCollisionShapeData_m_shapeType_set(void *c,int a); //attribute: int btCollisionShapeData->m_shapeType
int btCollisionShapeData_m_shapeType_get(void *c); //attribute: int btCollisionShapeData->m_shapeType
// attribute not supported: //attribute: char[4] btCollisionShapeData->m_padding
void* btCompoundShape_new(int p0); //constructor: btCompoundShape  ( ::btCompoundShape::* )( bool ) 
void btCompoundShape_free(void *c);
 
void btCompoundShape_calculateLocalInertia(void *c,float p0,float* p1); //method: calculateLocalInertia void ( ::btCompoundShape::* )( ::btScalar,::btVector3 & ) const
void* btCompoundShape_getDynamicAabbTree(void *c); //method: getDynamicAabbTree ::btDbvt const * ( ::btCompoundShape::* )(  ) const
void* btCompoundShape_getDynamicAabbTree0(void *c); //method: getDynamicAabbTree ::btDbvt const * ( ::btCompoundShape::* )(  ) const
void* btCompoundShape_getDynamicAabbTree1(void *c); //method: getDynamicAabbTree ::btDbvt * ( ::btCompoundShape::* )(  ) 
int btCompoundShape_getUpdateRevision(void *c); //method: getUpdateRevision int ( ::btCompoundShape::* )(  ) const
char const * btCompoundShape_serialize(void *c,void* p0,void* p1); //method: serialize char const * ( ::btCompoundShape::* )( void *,::btSerializer * ) const
void btCompoundShape_getLocalScaling(void *c,float* ret); //method: getLocalScaling ::btVector3 const & ( ::btCompoundShape::* )(  ) const
void btCompoundShape_createAabbTreeFromChildren(void *c); //method: createAabbTreeFromChildren void ( ::btCompoundShape::* )(  ) 
int btCompoundShape_calculateSerializeBufferSize(void *c); //method: calculateSerializeBufferSize int ( ::btCompoundShape::* )(  ) const
char const * btCompoundShape_getName(void *c); //method: getName char const * ( ::btCompoundShape::* )(  ) const
void btCompoundShape_setLocalScaling(void *c,float* p0); //method: setLocalScaling void ( ::btCompoundShape::* )( ::btVector3 const & ) 
void btCompoundShape_getAabb(void *c,float* p0,float* p1,float* p2); //method: getAabb void ( ::btCompoundShape::* )( ::btTransform const &,::btVector3 &,::btVector3 & ) const
void* btCompoundShape_getChildShape(void *c,int p0); //method: getChildShape ::btCollisionShape * ( ::btCompoundShape::* )( int ) 
void* btCompoundShape_getChildShape0(void *c,int p0); //method: getChildShape ::btCollisionShape * ( ::btCompoundShape::* )( int ) 
void* btCompoundShape_getChildShape1(void *c,int p0); //method: getChildShape ::btCollisionShape const * ( ::btCompoundShape::* )( int ) const
void btCompoundShape_addChildShape(void *c,float* p0,void* p1); //method: addChildShape void ( ::btCompoundShape::* )( ::btTransform const &,::btCollisionShape * ) 
void btCompoundShape_getChildTransform(void *c,int p0,float* ret); //method: getChildTransform ::btTransform & ( ::btCompoundShape::* )( int ) 
void btCompoundShape_getChildTransform0(void *c,int p0,float* ret); //method: getChildTransform ::btTransform & ( ::btCompoundShape::* )( int ) 